--- a/src/components/PrimaryButton.module.css
+++ b/src/components/PrimaryButton.module.css
@@ -1,5 +1,4 @@
 .actionButton {
-  /* width: 8%; */
   margin-left: auto;
   color: white;
   font-size: 18px;
@@ -13,4 +12,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 991px) {
+  .actionButton {
+    margin-left: 1%;
+  }
 }
