--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -4,7 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 85vh;
+  /* height: 85vh; */
+  padding-top: 6%;
+  padding-bottom: 6%;
 
   border-top: solid 1px rgba(85, 96, 124, 0.2);
 }
@@ -16,7 +18,7 @@
 }
 
 .badgeOuter {
-  border: solid 1px rgba(85, 96, 124, 0.2);
+  border: solid 1px rgba(85, 96, 124, 0.3);
   border-radius: 30px;
   padding: 7px;
   width: fit-content;
@@ -75,12 +77,10 @@
 
 .inputDiv {
   border-radius: 15px;
-  border: solid 1px rgba(85, 96, 124, 0.2);
+  border: solid 1px rgba(85, 96, 124, 0.3);
   width: fit-content;
-  padding: 5px 15px;
-}
+  padding: 5px 5px;
 
-.inputDiv {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -108,6 +108,32 @@
 
 .heroImg {
   width: 90%;
+}
+
+.vline {
+  width: 2px;
+  border-right: solid 1px rgba(85, 96, 124, 0.3);
+  height: 25px;
+}
+
+/* portfolio */
+
+.portfolioSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bgColor);
+}
+
+.portfolioContainer {
+  max-width: 100%;
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.portfolioPara {
+  color: var(--textColor);
+  margin: 80px 0 30px;
 }
 
 @media (max-width: 1200px) {
