--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -90,7 +90,7 @@
 
 .checkIcon {
   color: var(--primaryColor);
-  margin-right: 10px;
+  margin-top: 3px;
 }
 
 .checkRow {
@@ -283,7 +283,7 @@
 }
 
 .img2 {
-  width: 50%;
+  width: 100%;
 }
 
 /* media queries */
@@ -299,6 +299,14 @@
 
   .heroPara {
     font-size: 16px;
+  }
+
+  .perosnalDataIconParaContent {
+    width: 80%;
+    margin-left: 10px;
+  }
+  .checkIcon {
+    margin-top: 3px;
   }
 }
 
@@ -319,6 +327,11 @@
   .featureCard {
     width: 45%;
     margin: 10px;
+  }
+
+  .personalDataNumber {
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 }
 
@@ -344,10 +357,24 @@
   }
 
   .featureHeading {
-    padding-left: 10px;
+    margin-top: 10px;
   }
 
   .featureCard {
     width: 100%;
+  }
+
+  .personalDataCardContaienr {
+    padding: 5px;
+    padding-top: 20px;
+  }
+
+  .personalDataPara {
+    font-size: 18px;
+  }
+
+  .perosnalDataIconParaContent {
+    font-size: 16px;
+    margin-left: 20px;
   }
 }
