--- a/src/components/TabCard.module.css
+++ b/src/components/TabCard.module.css
@@ -1,7 +1,7 @@
 .mainContainer {
   border: solid 1.5px rgba(85, 96, 124, 0.2);
   border-radius: 20px;
-  padding: 30px;
+  padding: 30px 40px;
 }
 
 .tabCardArrowCol {
