--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -172,6 +172,7 @@
   width: 30%;
   margin: auto;
   margin-bottom: 4%;
+  margin-top: 30px;
 }
 
 .featureCardRow {
@@ -327,20 +328,50 @@
 
 /* job vacancy */
 
-.navPills {
-  justify-content: center;
+.jobVacancySection {
+  background-color: var(--bgColor);
 }
 
-.tabButton .tabButton {
-  margin-left: auto;
-  color: white;
-  font-size: 18px;
-  border: solid 2px transparent;
-  padding: 10px 20px;
-  background: var(--primaryColor);
+.vacancyPara {
+  width: 50%;
+}
+.navPills {
+  background-color: white;
+  padding: 5px;
+  border: solid 1px rgba(85, 96, 124, 0.2);
+  border-radius: 15px;
+  width: fit-content;
+  margin: auto;
+}
 
-  border-radius: 10px;
-  /* transition: ease-in-out 0.3s; */
+.tabButton {
+  font-size: 20px;
+  border-radius: 8px !important;
+  color: var(--primaryColor);
+}
+
+.tabSectionBottomLinePara {
+  font-size: 18px;
+  color: var(--textColor);
+}
+
+.tabSectionBottomLineLink {
+  color: var(--primaryColor);
+  text-decoration: underline;
+  margin-left: 10px;
+}
+
+.tabCardBottomCol {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 5%;
+}
+
+.tabBottomLineArrow {
+  color: var(--primaryColor);
 }
 
 /* media queries */
