--- a/src/components/TabCard.module.css
+++ b/src/components/TabCard.module.css
@@ -2,6 +2,7 @@
   border: solid 1.5px rgba(85, 96, 124, 0.2);
   border-radius: 20px;
   padding: 30px 40px;
+  background-color: white;
 }
 
 .tabCardArrowCol {
@@ -44,6 +45,7 @@
   display: flex;
   align-items: center;
   font-size: 18px;
+  margin-top: 10px;
 }
 
 .tabCardSmallIcon {
